patch fix nested menus in sidebar spacing and sizing

--- a/src/style.css
+++ b/src/style.css
@@ -657,3 +657,10 @@ main nav.pagination ul li span.current {
 
 /* patches */
 
+.default-page main > aside nav ul {
+  font-size: 1rem;
+}
+
+.default-page main > aside nav ul ul {
+  margin-top: .8em;
+}
